using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Domain.Enums
{
    public enum ContactInfoType
    {
        PHONE_NUMER = 0,
        FACEBOOK = 1,
        TWITTER = 2,
        EMAIL = 3,
        INSTAGRAM = 4,
        TIKTOK = 5
    }
}
